--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/server/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node ./dist/src/server/app.js",
+    "test": "mocha -r ts-node/register ./test/**/*.ts"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,23 @@
   },
   "homepage": "https://github.com/ndeberuti/crypto-smartorder-router#readme",
   "dependencies": {
+    "@types/config": "0.0.38",
+    "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.11",
-    "express": "^4.17.1"
+    "@types/sinon": "^10.0.0",
+    "axios": "^0.21.1",
+    "config": "^3.3.6",
+    "crypto-js": "^4.0.0",
+    "express": "^4.17.1",
+    "sinon": "^10.0.0"
+  },
+  "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/chai": "^4.2.16",
+    "@types/mocha": "^8.2.2",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
