--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,6 @@
       "outDir": "./dist",
       "strict": true,
       "esModuleInterop": true,
-      "inlineSourceMap": true
+      "sourceMap": true
     }
-  }
+}
