--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "config": "^3.3.6",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
-    "sinon": "^10.0.0"
+    "sinon": "^10.0.0",
+    "uuidv4": "^6.2.7"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
