--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "@types/config": "0.0.38",
     "@types/crypto-js": "^4.0.1",
     "@types/express": "^4.17.11",
+    "@types/mssql": "^6.0.7",
     "@types/sinon": "^10.0.0",
     "axios": "^0.21.1",
     "config": "^3.3.6",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
+    "mssql": "^6.3.1",
     "sinon": "^10.0.0",
     "uuidv4": "^6.2.7"
   },
