--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./dist/src/server/app.js",
-    "test": "mocha -r ts-node/register ./test/**/*.ts"
+    "test": "mocha -r ts-node/register ./test/**/*.test.ts"
   },
   "repository": {
     "type": "git",
@@ -24,10 +24,12 @@
     "@types/mssql": "^6.0.7",
     "@types/sinon": "^10.0.0",
     "axios": "^0.21.1",
+    "chai-http": "^4.3.0",
     "config": "^3.3.6",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "mssql": "^6.3.1",
+    "nock": "^13.0.11",
     "sinon": "^10.0.0",
     "uuidv4": "^6.2.7"
   },
@@ -37,7 +39,6 @@
     "@types/mocha": "^8.2.2",
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4"
+    "ts-node": "^9.1.1"
   }
 }
