--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "tsc && node ./dist/src/server/app.js",
-    "test": "mocha -r ts-node/register ./test/**/*.test.ts"
+    "test": "mocha --recursive --exit ./test/**/*.test.ts"
   },
   "repository": {
     "type": "git",
